--- a/plugins/rapid7_insightidr/plugin.spec.yaml
+++ b/plugins/rapid7_insightidr/plugin.spec.yaml
@@ -4,7 +4,7 @@ products: [insightconnect]
 name: rapid7_insightidr
 title: "Rapid7 InsightIDR"
 description: "This plugin allows you to add indicators to a threat and see the status of investigations"
-version: 4.1.1
+version: 4.1.2
 supported_versions: ["Latest release successfully tested on 2022-07-20."]
 vendor: rapid7
 cloud_ready: true
@@ -593,7 +593,7 @@ connection:
     example: United States 1
 actions:
   replace_indicators:
-    title: Replace Indicators for a Threat
+    title: Replace Indicators
     description: Replace InsightIDR threat indicators in a threat with the given threat key
     input:
       key:
