--- a/plugins/threatcrowd/plugin.spec.yaml
+++ b/plugins/threatcrowd/plugin.spec.yaml
@@ -8,7 +8,7 @@ version: 4.0.0
 vendor: rapid7
 support: rapid7
 supported_versions: ["Threatcrowd API 2022-11-02"]
-status: []
+status: [obsolete]
 cloud_ready: true
 resources:
   source_url: https://github.com/rapid7/insightconnect-plugins/tree/master/plugins/threatcrowd
