[PLGN-78] - Disable the threat crowd plugin + Bump version number (#1553)
* made obsolete and changed version number (#1552)

* checksum issue resolved

* added obsolete

--- a/plugins/threatcrowd/plugin.spec.yaml
+++ b/plugins/threatcrowd/plugin.spec.yaml
@@ -4,11 +4,11 @@ products: [insightconnect]
 name: threatcrowd
 title: Threat Crowd
 description: Threat Crowd is an open source search engine for threats. Using the Threat Crowd plugin for Rapid7 InsightConnect, users can search by domain, IP address, email address, and other information to discover threats
-version: 3.1.0
+version: 4.0.0
 vendor: rapid7
 support: rapid7
 supported_versions: ["Threatcrowd API 2022-11-02"]
-status: []
+status: [obsolete]
 cloud_ready: true
 resources:
   source_url: https://github.com/rapid7/insightconnect-plugins/tree/master/plugins/threatcrowd
