MC-1340 Add Investigation driver enum

--- a/plugins/bmc_helix_itsm/plugin.spec.yaml
+++ b/plugins/bmc_helix_itsm/plugin.spec.yaml
@@ -460,6 +460,12 @@ actions:
         type: string
         required: false
         example: High Impact Incident
+        enum:
+          - High Impact Incident
+          - Non-Routine Incident
+          - Recurring Incidents - Clustering
+          - Other
+          - ''
       coordinatorSupportCompany:
         title: Coordinator Support Company
         description: Coordinator support company
