--- a/plugins/rapid7_insightidr/plugin.spec.yaml
+++ b/plugins/rapid7_insightidr/plugin.spec.yaml
@@ -4,7 +4,7 @@ products: [insightconnect]
 name: rapid7_insightidr
 title: "Rapid7 InsightIDR"
 description: "This plugin allows you to add indicators to a threat and see the status of investigations"
-version: 4.1.1
+version: 4.2.0
 supported_versions: ["Latest release successfully tested on 2022-07-20."]
 vendor: rapid7
 cloud_ready: true
@@ -592,6 +592,51 @@ connection:
     default: United States 1
     example: United States 1
 actions:
+  replace_indicators:
+    title: Replace Indicators
+    description: Replace InsightIDR threat indicators in a threat with the given threat key
+    input:
+      key:
+        title: Key
+        description: The key of a threat for which the indicators are going to be added
+        type: string
+        required: true
+        example: c9404e11-b81a-429d-9400-05c531f229c3
+      ips:
+        title: IP Addresses
+        description: IP addresses to add
+        type: "[]string"
+        required: false
+        example: [ "10.0.0.1","10.0.0.2" ]
+      hashes:
+        title: Process Hashes
+        description: Process hashes to add
+        type: "[]string"
+        required: false
+        example: [ "A94A8FE5CCB19BA61C4C0873D391E987982FBBD3","C3499C2729730A7F807EFB8676A92DCB6F8A3F8F" ]
+      domain_names:
+        title: Domain Names
+        description: Domain names to add
+        type: "[]string"
+        required: false
+        example: [ "rapid7.com","google.com" ]
+      urls:
+        title: URLs
+        description: URLs to add
+        type: "[]string"
+        required: false
+        example: [ "https://example.com","https://test.com" ]
+    output:
+      rejected_indicators:
+        title: Rejected Indicators
+        description: The list of indicators that have been rejected during the update
+        type: "[]string"
+        required: false
+      threat:
+        title: Threat
+        description: The information about the threat
+        type: threat
+        required: false
   list_investigations:
     title: List Investigations
     description: Retrieve a page of investigations matching the given request parameters
