PLGN-106 aws ec2 add region

--- a/plugins/aws_ec2/plugin.spec.yaml
+++ b/plugins/aws_ec2/plugin.spec.yaml
@@ -9,7 +9,7 @@ supported_versions: ["botocore 1.27.96"]
 status: []
 description: Amazon Elastic Compute Cloud (Amazon EC2) provides resizable computing
   capacity in the Amazon Web Services (AWS) cloud. This plugin allows you to manage your EC2 environment
-version: 1.2.1
+version: 1.3.0
 resources:
   vendor_url: https://www.amazon.com
   source_url: https://github.com/rapid7/insightconnect-plugins/tree/master/plugins/aws_ec2
@@ -738,6 +738,22 @@ types:
       type: string
       description: The ID of the reservation
       required: false
+  assume_role_params:
+    region:
+      title: Region
+      description: Which section of the AWS cloud is being inspected
+      type: string
+      required: false
+    role_arn:
+      title: Role ARN
+      description: AWS IAM role ARN to assume
+      type: string
+      required: false
+    external_id:
+      title: External ID
+      description: External ID given during role creation
+      type: string
+      required: false
 connection:
   aws_access_key_id:
     title: AWS Access Key ID
@@ -763,7 +779,7 @@ connection:
     description: AWS IAM role ARN to assume
     type: string
     required: false
-    example: arn:aws:iam::123456781111:role/ExampleRole 
+    example: arn:aws:iam::123456781111:role/ExampleRole
   external_id:
     title: External ID
     description: External ID given during role creation
@@ -838,18 +854,12 @@ actions:
         description: Not supported
         required: false
         example: "otheraccountgroup"
-      role_arn:
-        title: Role ARN
-        description: AWS IAM role ARN to assume
-        type: string
+      assume_role_params:
+        title: Assume Role Parameters
+        description: Parameters that allows to assume IAM role
+        type: assume_role_params
         required: false
-        example: arn:aws:iam::123456781111:role/ExampleRole 
-      external_id:
-        title: External ID
-        description: External ID given during role creation
-        type: string
-        required: false
-        example: exampleexternalid
+        example: "{'role_arn': 'arn:aws:iam::123456781111:role/ExampleRole', 'external_id': 'ExampleExternalID', 'region': 'us-west-2'"
     output:
       response_metadata:
         title: Response Metadata
@@ -932,18 +942,12 @@ actions:
           without actually making the request, and provides an error response
         required: false
         example: false
-      role_arn:
-        title: Role ARN
-        description: AWS IAM role ARN to assume
-        type: string
+      assume_role_params:
+        title: Assume Role Parameters
+        description: Parameters that allows to assume IAM role
+        type: assume_role_params
         required: false
-        example: arn:aws:iam::123456781111:role/ExampleRole 
-      external_id:
-        title: External ID
-        description: External ID given during role creation
-        type: string
-        required: false
-        example: exampleexternalid
+        example: "{'role_arn': 'arn:aws:iam::123456781111:role/ExampleRole', 'external_id': 'ExampleExternalID', 'region': 'us-west-2'"
     output:
       response_metadata:
         title: Response Metadata
@@ -973,18 +977,12 @@ actions:
           without actually making the request, and provides an error response
         required: false
         example: false
-      role_arn:
-        title: Role ARN
-        description: AWS IAM role ARN to assume
-        type: string
+      assume_role_params:
+        title: Assume Role Parameters
+        description: Parameters that allows to assume IAM role
+        type: assume_role_params
         required: false
-        example: arn:aws:iam::123456781111:role/ExampleRole 
-      external_id:
-        title: External ID
-        description: External ID given during role creation
-        type: string
-        required: false
-        example: exampleexternalid
+        example: "{'role_arn': 'arn:aws:iam::123456781111:role/ExampleRole', 'external_id': 'ExampleExternalID', 'region': 'us-west-2'"
     output:
       response_metadata:
         title: Response Metadata
@@ -1026,18 +1024,12 @@ actions:
           without actually making the request, and provides an error response
         required: false
         example: false
-      role_arn:
-        title: Role ARN
-        description: AWS IAM role ARN to assume
-        type: string
+      assume_role_params:
+        title: Assume Role Parameters
+        description: Parameters that allows to assume IAM role
+        type: assume_role_params
         required: false
-        example: arn:aws:iam::123456781111:role/ExampleRole 
-      external_id:
-        title: External ID
-        description: External ID given during role creation
-        type: string
-        required: false
-        example: exampleexternalid
+        example: "{'role_arn': 'arn:aws:iam::123456781111:role/ExampleRole', 'external_id': 'ExampleExternalID', 'region': 'us-west-2'"
     output:
       response_metadata:
         title: Response Metadata
@@ -1116,18 +1108,12 @@ actions:
         description: Not supported
         required: false
         example: "ownergroup"
-      role_arn:
-        title: Role ARN
-        description: AWS IAM role ARN to assume
-        type: string
+      assume_role_params:
+        title: Assume Role Parameters
+        description: Parameters that allows to assume IAM role
+        type: assume_role_params
         required: false
-        example: arn:aws:iam::123456781111:role/ExampleRole 
-      external_id:
-        title: External ID
-        description: External ID given during role creation
-        type: string
-        required: false
-        example: exampleexternalid
+        example: "{'role_arn': 'arn:aws:iam::123456781111:role/ExampleRole', 'external_id': 'ExampleExternalID', 'region': 'us-west-2'"
     output:
       response_metadata:
         title: Response Metadata
@@ -1210,18 +1196,12 @@ actions:
           without actually making the request, and provides an error response
         required: false
         example: true
-      role_arn:
-        title: Role ARN
-        description: AWS IAM role ARN to assume
-        type: string
+      assume_role_params:
+        title: Assume Role Parameters
+        description: Parameters that allows to assume IAM role
+        type: assume_role_params
         required: false
-        example: arn:aws:iam::123456781111:role/ExampleRole 
-      external_id:
-        title: External ID
-        description: External ID given during role creation
-        type: string
-        required: false
-        example: exampleexternalid
+        example: "{'role_arn': 'arn:aws:iam::123456781111:role/ExampleRole', 'external_id': 'ExampleExternalID', 'region': 'us-west-2'"
     output:
       response_metadata:
         title: Response Metadata
@@ -1265,18 +1245,12 @@ actions:
                "description": "Blah"
             }],
             "to_port": 8090}']
-      role_arn:
-        title: Role ARN
-        description: AWS IAM role ARN to assume
-        type: string
+      assume_role_params:
+        title: Assume Role Parameters
+        description: Parameters that allows to assume IAM role
+        type: assume_role_params
         required: false
-        example: arn:aws:iam::123456781111:role/ExampleRole 
-      external_id:
-        title: External ID
-        description: External ID given during role creation
-        type: string
-        required: false
-        example: exampleexternalid
+        example: "{'role_arn': 'arn:aws:iam::123456781111:role/ExampleRole', 'external_id': 'ExampleExternalID', 'region': 'us-west-2'"
     output:
       response_metadata:
         title: Response Metadata
@@ -1324,18 +1298,12 @@ actions:
                "description": "Blah"
             }],
             "to_port": 8090}']
-      role_arn:
-        title: Role ARN
-        description: AWS IAM role ARN to assume
-        type: string
+      assume_role_params:
+        title: Assume Role Parameters
+        description: Parameters that allows to assume IAM role
+        type: assume_role_params
         required: false
-        example: arn:aws:iam::123456781111:role/ExampleRole 
-      external_id:
-        title: External ID
-        description: External ID given during role creation
-        type: string
-        required: false
-        example: exampleexternalid
+        example: "{'role_arn': 'arn:aws:iam::123456781111:role/ExampleRole', 'external_id': 'ExampleExternalID', 'region': 'us-west-2'"
     output:
       response_metadata:
         title: Response Metadata
